--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kazuhito Tokita - portfolio</title>
-    <meta name="description" content="Webデザイナー 鴇田和士のポートフォリオサイトです。">
+    <meta name="description" content="Kazuhito-Tokitaのポートフォリオサイトです。">
     <meta name="keywords" content="Web, デザイン, エンジニア, ポートフォリオ, Web制作">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="./css/style.css">
