--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div class="menu-pc">
             <ul>
                 <li><a href="index.html">top</a></li>
-                <li><a href="about.html">about</a></li>
+                <li class="li-about"><a href="about.html">about</a></li>
                 <li><a href="works.html">works</a></li>
                 <li><a href="blog.html">blog</a></li>
                 <li><a href="contact.html">contact</a></li>
