--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
                 <li><a href="index.html">top</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="works.html">works</a></li>
-                <li><a href="blog.html">blog</a></li>
+                <li class="li-blog"><a href="blog.html">blog</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </div>
