--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <li><a href="about.html">about</a></li>
                 <li><a href="works.html">works</a></li>
                 <li><a href="blog.html">blog</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li class="li-contact"><a href="contact.html">contact</a></li>
             </ul>
         </div>
     </header>
@@ -77,7 +77,7 @@
         <section id="sns">
             <ul>
                 <li><a href="mailto:tokky.kz08@gmail.com"><img src="img/address.png" alt="メール"></a></li>
-                <li><a href=""><img src="img/git.png" alt="GitHub"></a></li>
+                <li><a href="https://github.com/tokky08"><img src="img/git.png" alt="GitHub"></a></li>
                 <li><a href="https://twitter.com/tokky08"><img src="img/twitter.png" alt="twitter"></a></li>
             </ul>
         </section>
