--- a/works.html
+++ b/works.html
@@ -38,7 +38,7 @@
             <ul>
                 <li><a href="index.html">top</a></li>
                 <li><a href="about.html">about</a></li>
-                <li><a href="works.html">works</a></li>
+                <li class="li-works"><a href="works.html">works</a></li>
                 <li><a href="blog.html">blog</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
