worksに掲示板を追加

--- a/works.html
+++ b/works.html
@@ -59,22 +59,22 @@
                         <a><img src="img/site_2.png" alt="作品2"></a>
                     </div>
                     <div id="sld3" class="sld">
-                        <a><img src="img/site_3.png" alt="作品3"></a>
+                        <a><img src="img/site_4.png" alt="作品3"></a>
                     </div>
                     <div id="sld4" class="sld">
-                        <a><img src="img/site_4.png" alt="作品4"></a>
+                        <a><img src="img/site_5.png" alt="作品4"></a>
                     </div>
                     <div id="sld5" class="sld">
-                        <a><img src="img/site_5.png" alt="作品5"></a>
+                        <a><img src="img/site_6.png" alt="作品5"></a>
                     </div>
                     <div id="sld6" class="sld">
-                        <a><img src="img/site_6.png" alt="作品6"></a>
+                        <a><img src="img/site_7.png" alt="作品6"></a>
                     </div>
                     <div id="sld7" class="sld">
-                        <a><img src="img/site_7.png" alt="作品7"></a>
+                        <a><img src="img/site_8.png" alt="作品7"></a>
                     </div>
                     <div id="sld8" class="sld">
-                        <a><img src="img/site_8.png" alt="作品8"></a>
+                        <a><img src="img/site_9.png" alt="作品8"></a>
                     </div>
                 </div>
                 <div id="sld_nav"></div>
@@ -95,7 +95,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>ある技術書を一冊やり終えて完成したサイトです。これは技術書通り進めていけばできたサイトなのでポートフォリオとは言えないであろう。ただ初めて作成したサイトであり、サイト作成の流れを掴めた。また、このサイトはレスポンシブ化されていません。pcでみてください。これはポートフォリオではなく、ただの学習のための1作品です。</p>
+                    <p>ある技術書を一冊やり終えて完成したサイトです。初めて作成したサイトであり、サイト作成の流れを掴めました。また、このサイトはレスポンシブ化されていません。pcでみてください。これは、ただの学習のための1作品です。</p>
                 </div>
                 <div class="works_content fadein_2">
                     <div class="works-box">
@@ -110,24 +110,9 @@
                             </div>
                         </a>
                     </div>
-                    <p>情報理工学実験のテーマ8で作成した実験レポートとしてのサイトです。webオーサリングについて調べ学習等を行い。ここで初めてW3Cの存在を知った。以降サイトを作る時にはチェックするようにしている。また、このサイトはレスポンシブ化されていません。pcでみてください。これはポートフォリオではなく、ただの学習のための1作品です。</p>
+                    <p>情報理工学実験のテーマ8で作成した実験レポートとしてのサイトです。webオーサリングについて調べ学習等を行いました。ここで初めてW3Cの存在を知りました。また、このサイトはレスポンシブ化されていません。pcでみてください。これ、ただの学習のための1作品です。</p>
                 </div>
                 <div class="works_content fadein_3">
-                    <div class="works-box">
-                        <a href="collection-OF-works/responsive_coding/index.html">
-                            <img src="./img/site_3.png" alt="初レスポンシブ化したサイト">
-                            <div class="works-box-inner">
-                                <div class="text-center">
-                                    <h3>初レスポンシブ化したサイト</h3>
-                                    <small>2019.08</small>
-                                    <span class="button-readmore">Read More</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <p>レスポンシブデザインの練習のため簡易的に作ったサイトです。ここで初めてレスポンシブ化の技術を習得しました。また、sassでコーディングすることもしました。これはポートフォリオではなく、ただの学習のための1作品です。</p>
-                </div>
-                <div class="works_content fadein_4">
                     <div class="works-box">
                         <a href="collection-OF-works/corporate-site-coding/index.html">
                             <img src="./img/site_4.png" alt="架空コーポレートサイト">
@@ -140,9 +125,9 @@
                             </div>
                         </a>
                     </div>
-                    <p>あるデザインデータから作成したコーポレートサイトです。このサイトにはフレームワークskeltonを使っています。初めてフレームワークを用いて作成したサイトです。また、レスポンシブ化もしていますこれはポートフォリオではなく、ただの学習のための1作品です。</p>
+                    <p>あるデザインデータから作成したコーポレートサイトです。このサイトにはフレームワークskeltonを使っています。初めてフレームワークを用いて作成したサイトです。SCSSも使っています。また、レスポンシブ化もしていますこれはポートフォリオではなく、ただの学習のための1作品です。</p>
                 </div>
-                <div class="works_content fadein_5">
+                <div class="works_content fadein_4">
                     <div class="works-box">
                         <a href="collection-OF-works/shopping-site-coding/top.html">
                             <img src="./img/site_5.png" alt="架空ショッピングサイト">
@@ -155,9 +140,9 @@
                             </div>
                         </a>
                     </div>
-                    <p>あるデザインデータから作成したショッピングサイトです。実際にクライアントから依頼を受けるのと同様な形で作成したサイトです。模写のような練習となりました。レスポンシブ化もしています。これはポートフォリオではなく、ただの学習のための1作品です。</p>
+                    <p>あるデザインデータから作成したショッピングサイトです。実際にクライアントから依頼を受けるのと同様な形で作成したサイトです。模写のような練習となりました。レスポンシブ化とSCSSを使っています。これはポートフォリオではなく、ただの学習のための1作品です。</p>
                 </div>
-                <div class="works_content fadein_6">
+                <div class="works_content fadein_5">
                     <div class="works-box">
                         <a href="collection-OF-works/Fictional_Ophthalmology/home.html">
                             <img src="./img/site_6.png" alt="架空コーポレートサイト">
@@ -172,7 +157,7 @@
                     </div>
                     <p>このサイトはモックアップからデザインカンプ、コーディングと全て1から自分で考えて作成したサイトです。カルーセル部分をcssのみで実装しました。唯一ポートフォリオと言える作品となっています。</p>
                 </div>
-                <div class="works_content fadein_7">
+                <div class="works_content fadein_6">
                     <div class="works-box">
                         <a href="collection-OF-works/airbnb_Replication/index.html">
                             <img src="./img/site_7.png" alt="airbinの模写">
@@ -185,9 +170,9 @@
                             </div>
                         </a>
                     </div>
-                    <p>インターン中である未来電子テクノロジーから課された課題で作成したサイトです。airbnbのサイトを模写しました。完成度は低いですが、アウトプットとして学習のための1作品です。このサイトは比較的模写しやすいと思いました。なので初学者にはオススメです。</p>
+                    <p>インターンをしていた未来電子テクノロジーから課された課題で作成したサイトです。airbnbのサイトを模写しました。完成度は低いですが、アウトプットとして学習のための1作品です。このサイトは比較的模写しやすいと思いました。なので初学者にはオススメです。</p>
                 </div>
-                <div class="works_content fadein_8">
+                <div class="works_content fadein_7">
                     <div class="works-box">
                         <a href="collection-OF-works/report-HTML-CSS/index.html">
                             <img src="./img/site_8.png" alt="未来電子テクノジーでのレポート">
@@ -200,7 +185,22 @@
                             </div>
                         </a>
                     </div>
-                    <p>インターン中である未来電子テクノロジーで課された課題で作成したサイトです。HTMLとCSSの学習した内容を簡潔にまとめたサイトとなっています。</p>
+                    <p>インターンをしていた未来電子テクノロジーで課された課題で作成したサイトです。HTMLとCSSの学習した内容を簡潔にまとめたサイトとなっています。</p>
+                </div>
+                <div class="works_content fadein_8">
+                    <div class="works-box">
+                        <a href="http://bbs-tokky08.herokuapp.com/">
+                            <img src="./img/site_9.png" alt="掲示板を作ってみた">
+                            <div class="works-box-inner">
+                                <div class="text-center">
+                                    <h3>掲示板を作ってみた</h3>
+                                    <small>2020.02</small>
+                                    <span class="button-readmore">Read More</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <p>PHP/MySQLを用いて簡易的な掲示板を作りました。herokuで公開しています。ローカルではDockerを用いて開発しました。</p>
                 </div>
             </div>
         </section>
