formのinputにvalueを追加

--- a/contact.html
+++ b/contact.html
@@ -55,12 +55,12 @@
                 <form>
                     <div class="item">
                         <label class="label">お名前</label>
-                        <input class="inputs" type="text" name="name">
+                        <input class="inputs" type="text" name="name" value="">
                     </div>
 
                     <div class="item">
                         <label class="label">メールアドレス</label>
-                        <input class="inputs" type="email" name="email">
+                        <input class="inputs" type="email" name="email" value="">
                     </div>
 
                     <div class="item">
@@ -69,7 +69,8 @@
                     </div>
 
                     <div class="btn-area">
-                        <input type="submit" value="送信する"><input type="reset" value="リセット">
+                        <input type="submit" value="送信する">
+                        <input type="reset" value="リセット">
                     </div>
                 </form>
             </div>
