自己紹介文を更新

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     </tr>
                 </table>
                 <div class="text">
-                    <p>京都産業大学情報理工学部2回生22卒予定の鴇田和士です。学校ではc/javaを勉強し、現在はHTML/CSS/JavaScript/Pythonを学習中です。未来電子テクノロジーでインターン中です。</p>
+                    <p>京都産業大学情報理工学部3回生22卒予定の鴇田和士です。データサイエンス/機械学習/WEB系に興味があります。現在は主に、WEBサイト・WEBアプリ制作に力を入れています。これまで学習したものは、HTML/CSS/SCSS/JavaScritp/PHP/SQL/C/Java/Python/Git/Dcoker等です。</p>
                 </div>
             </div>
         </section>
