説明を変更

--- a/works.html
+++ b/works.html
@@ -95,7 +95,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>ある技術書を一冊やり終えて完成したサイトです。初めて作成したサイトであり、サイト作成の流れを掴めました。また、このサイトはレスポンシブ化されていません。pcでみてください。これは、ただの学習のための1作品です。</p>
+                    <p>ある技術書を一冊やり終えて完成したサイトです。初めて作成したサイトであり、サイト作成の流れを掴めました。また、このサイトはレスポンシブ化されていません。pcでみてください。学習のための1作品です。</p>
                 </div>
                 <div class="works_content fadein_2">
                     <div class="works-box">
@@ -110,7 +110,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>情報理工学実験のテーマ8で作成した実験レポートとしてのサイトです。webオーサリングについて調べ学習等を行いました。ここで初めてW3Cの存在を知りました。また、このサイトはレスポンシブ化されていません。pcでみてください。これ、ただの学習のための1作品です。</p>
+                    <p>情報理工学実験のテーマ8で作成した実験レポートとしてのサイトです。webオーサリングについて調べ学習等を行いました。ここで初めてW3Cの存在を知りました。また、このサイトはレスポンシブ化されていません。pcでみてください。学習のための1作品です。</p>
                 </div>
                 <div class="works_content fadein_3">
                     <div class="works-box">
@@ -125,7 +125,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>あるデザインデータから作成したコーポレートサイトです。このサイトにはフレームワークskeltonを使っています。初めてフレームワークを用いて作成したサイトです。SCSSも使っています。また、レスポンシブ化もしていますこれはポートフォリオではなく、ただの学習のための1作品です。</p>
+                    <p>あるデザインデータから作成したコーポレートサイトです。このサイトにはフレームワークskeltonを使っています。初めてフレームワークを用いて作成したサイトです。SCSSも使っています。また、レスポンシブ化もしています。学習のための1作品です。</p>
                 </div>
                 <div class="works_content fadein_4">
                     <div class="works-box">
@@ -140,7 +140,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>あるデザインデータから作成したショッピングサイトです。実際にクライアントから依頼を受けるのと同様な形で作成したサイトです。模写のような練習となりました。レスポンシブ化とSCSSを使っています。これはポートフォリオではなく、ただの学習のための1作品です。</p>
+                    <p>あるデザインデータから作成したショッピングサイトです。実際にクライアントから依頼を受けるのと同様な形で作成したサイトです。模写のような練習となりました。レスポンシブ化とSCSSを使っています。学習のための1作品です。</p>
                 </div>
                 <div class="works_content fadein_5">
                     <div class="works-box">
