--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                     </tr>
                     <tr>
                         <td>University</td>
-                        <td>京都産業大学（KSU）</td>
+                        <td>京都にある大学</td>
                     </tr>
                     <tr>
                         <td>Birthday</td>
@@ -69,7 +69,7 @@
                     </tr>
                 </table>
                 <div class="text">
-                    <p>京都産業大学情報理工学部3回生22卒予定の鴇田和士です。データサイエンス/機械学習/WEB系に興味があります。現在は主に、WEBサイト・WEBアプリ制作に力を入れています。これまで学習したものは、HTML/CSS/SCSS/JavaScritp/PHP/SQL/C/Java/Python/Git/Dcoker等です。</p>
+                    <p>京都の情報系学部の大学に通う22卒予定の学生です。データサイエンス/機械学習/WEB系に興味があります。現在は主に、WEBサイト・WEBアプリ制作に力を入れています。これまで学習したものは、HTML/CSS/SCSS/JavaScritp/PHP/SQL/C/Java/Python/Git/Dcoker等です。</p>
                 </div>
             </div>
         </section>
