--- a/works.html
+++ b/works.html
@@ -163,7 +163,7 @@
                             <img src="./img/site_7.png" alt="airbinの模写">
                             <div class="works-box-inner">
                                 <div class="text-center">
-                                    <h3>airbinを模写したサイト</h3>
+                                    <h3>airbnbを模写したサイト</h3>
                                     <small>2019.10</small>
                                     <span class="button-readmore">Read More</span>
                                 </div>
