--- a/works.html
+++ b/works.html
@@ -55,26 +55,29 @@
                     <div id="sld1" class="sld">
                         <a><img src="img/site_1.png" alt="作品1"></a>
                     </div>
-                    <div id="sld2" class="sld">
+                    <!--<div id="sld2" class="sld">
                         <a><img src="img/site_2.png" alt="作品2"></a>
+                    </div>-->
+                    <div id="sld2" class="sld">
+                        <a><img src="img/site_4.png" alt="作品2"></a>
                     </div>
                     <div id="sld3" class="sld">
-                        <a><img src="img/site_4.png" alt="作品3"></a>
+                        <a><img src="img/site_5.png" alt="作品3"></a>
                     </div>
                     <div id="sld4" class="sld">
-                        <a><img src="img/site_5.png" alt="作品4"></a>
+                        <a><img src="img/site_6.png" alt="作品4"></a>
                     </div>
                     <div id="sld5" class="sld">
-                        <a><img src="img/site_6.png" alt="作品5"></a>
+                        <a><img src="img/site_7.png" alt="作品5"></a>
                     </div>
                     <div id="sld6" class="sld">
-                        <a><img src="img/site_7.png" alt="作品6"></a>
+                        <a><img src="img/site_8.png" alt="作品6"></a>
                     </div>
                     <div id="sld7" class="sld">
-                        <a><img src="img/site_8.png" alt="作品7"></a>
+                        <a><img src="img/site_9.png" alt="作品7"></a>
                     </div>
                     <div id="sld8" class="sld">
-                        <a><img src="img/site_9.png" alt="作品8"></a>
+                        <a><img src="img/site_10.png" alt="作品8"></a>
                     </div>
                 </div>
                 <div id="sld_nav"></div>
@@ -84,63 +87,63 @@
             <div class="works-flex">
                 <div class="works_content fadein_1">
                     <div class="works-box">
-                        <a href="collection-OF-works/Creative_HTML_and_CSS/index.html">
-                            <img src="./img/site_1.png" alt="架空カフェサイト">
+                        <a href="https://twitter-rank-tokky08.herokuapp.com/">
+                            <img src="./img/site_10.png" alt="Twitter Rank">
                             <div class="works-box-inner">
                                 <div class="text-center">
-                                    <h3>架空カフェサイト</h3>
-                                    <small>2019.05</small>
+                                    <h3>Twitter Rank</h3>
+                                    <small>2020.03</small>
                                     <span class="button-readmore">Read More</span>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <p>ある技術書を一冊やり終えて完成したサイトです。初めて作成したサイトであり、サイト作成の流れを掴めました。また、このサイトはレスポンシブ化されていません。pcでみてください。学習のための1作品です。</p>
+                    <p>Python/Django/TwitterAPIを使って開発しました。入力したユーザーのフォロー・フォロワー数がフォローしている方々または、フォロワーの方々の中で何位かをランク付するアプリです。</p>
                 </div>
                 <div class="works_content fadein_2">
                     <div class="works-box">
-                        <a href="collection-OF-works/WEB-Experiment/index.html">
-                            <img src="./img/site_2.png" alt="授業で作成したサイト">
+                        <a href="http://bbs-tokky08.herokuapp.com/">
+                            <img src="./img/site_9.png" alt="掲示板を作ってみた">
                             <div class="works-box-inner">
                                 <div class="text-center">
-                                    <h3>授業で作成したサイト</h3>
-                                    <small>2019.06</small>
+                                    <h3>掲示板を作ってみた</h3>
+                                    <small>2020.02</small>
                                     <span class="button-readmore">Read More</span>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <p>情報理工学実験のテーマ8で作成した実験レポートとしてのサイトです。webオーサリングについて調べ学習等を行いました。ここで初めてW3Cの存在を知りました。また、このサイトはレスポンシブ化されていません。pcでみてください。学習のための1作品です。</p>
+                    <p>PHP/MySQLを用いて簡易的な掲示板を作りました。herokuで公開しています。ローカルではDockerを用いて開発しました。</p>
                 </div>
                 <div class="works_content fadein_3">
                     <div class="works-box">
-                        <a href="collection-OF-works/corporate-site-coding/index.html">
-                            <img src="./img/site_4.png" alt="架空コーポレートサイト">
+                        <a href="collection-OF-works/report-HTML-CSS/index.html">
+                            <img src="./img/site_8.png" alt="未来電子テクノジーでのレポート">
                             <div class="works-box-inner">
                                 <div class="text-center">
-                                    <h3>架空コーポレートサイト</h3>
-                                    <small>2019.08</small>
+                                    <h3>PGABCレポート</h3>
+                                    <small>2019.10</small>
                                     <span class="button-readmore">Read More</span>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <p>あるデザインデータから作成したコーポレートサイトです。このサイトにはフレームワークskeltonを使っています。初めてフレームワークを用いて作成したサイトです。SCSSも使っています。また、レスポンシブ化もしています。学習のための1作品です。</p>
+                    <p>インターンをしていた未来電子テクノロジーで課された課題で作成したサイトです。HTMLとCSSの学習した内容を簡潔にまとめたサイトとなっています。</p>
                 </div>
                 <div class="works_content fadein_4">
                     <div class="works-box">
-                        <a href="collection-OF-works/shopping-site-coding/top.html">
-                            <img src="./img/site_5.png" alt="架空ショッピングサイト">
+                        <a href="collection-OF-works/airbnb_Replication/index.html">
+                            <img src="./img/site_7.png" alt="airbinの模写">
                             <div class="works-box-inner">
                                 <div class="text-center">
-                                    <h3>架空ショッピングサイト</h3>
-                                    <small>2019.09</small>
+                                    <h3>airbnbを模写したサイト</h3>
+                                    <small>2019.10</small>
                                     <span class="button-readmore">Read More</span>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <p>あるデザインデータから作成したショッピングサイトです。実際にクライアントから依頼を受けるのと同様な形で作成したサイトです。模写のような練習となりました。レスポンシブ化とSCSSを使っています。学習のための1作品です。</p>
+                    <p>インターンをしていた未来電子テクノロジーから課された課題で作成したサイトです。airbnbのサイトを模写しました。完成度は低いですが、アウトプットとして学習のための1作品です。このサイトは比較的模写しやすいと思いました。なので初学者にはオススメです。</p>
                 </div>
                 <div class="works_content fadein_5">
                     <div class="works-box">
@@ -159,48 +162,63 @@
                 </div>
                 <div class="works_content fadein_6">
                     <div class="works-box">
-                        <a href="collection-OF-works/airbnb_Replication/index.html">
-                            <img src="./img/site_7.png" alt="airbinの模写">
+                        <a href="collection-OF-works/shopping-site-coding/top.html">
+                            <img src="./img/site_5.png" alt="架空ショッピングサイト">
                             <div class="works-box-inner">
                                 <div class="text-center">
-                                    <h3>airbnbを模写したサイト</h3>
-                                    <small>2019.10</small>
+                                    <h3>架空ショッピングサイト</h3>
+                                    <small>2019.09</small>
                                     <span class="button-readmore">Read More</span>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <p>インターンをしていた未来電子テクノロジーから課された課題で作成したサイトです。airbnbのサイトを模写しました。完成度は低いですが、アウトプットとして学習のための1作品です。このサイトは比較的模写しやすいと思いました。なので初学者にはオススメです。</p>
+                    <p>あるデザインデータから作成したショッピングサイトです。実際にクライアントから依頼を受けるのと同様な形で作成したサイトです。模写のような練習となりました。レスポンシブ化とSCSSを使っています。学習のための1作品です。</p>
                 </div>
                 <div class="works_content fadein_7">
                     <div class="works-box">
-                        <a href="collection-OF-works/report-HTML-CSS/index.html">
-                            <img src="./img/site_8.png" alt="未来電子テクノジーでのレポート">
+                        <a href="collection-OF-works/corporate-site-coding/index.html">
+                            <img src="./img/site_4.png" alt="架空コーポレートサイト">
                             <div class="works-box-inner">
                                 <div class="text-center">
-                                    <h3>PGABCレポート</h3>
-                                    <small>2019.10</small>
+                                    <h3>架空コーポレートサイト</h3>
+                                    <small>2019.08</small>
                                     <span class="button-readmore">Read More</span>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <p>インターンをしていた未来電子テクノロジーで課された課題で作成したサイトです。HTMLとCSSの学習した内容を簡潔にまとめたサイトとなっています。</p>
+                    <p>あるデザインデータから作成したコーポレートサイトです。このサイトにはフレームワークskeltonを使っています。初めてフレームワークを用いて作成したサイトです。SCSSも使っています。また、レスポンシブ化もしています。学習のための1作品です。</p>
                 </div>
+                <!--<div class="works_content fadein_8">
+                    <div class="works-box">
+                        <a href="collection-OF-works/WEB-Experiment/index.html">
+                            <img src="./img/site_2.png" alt="授業で作成したサイト">
+                            <div class="works-box-inner">
+                                <div class="text-center">
+                                    <h3>授業で作成したサイト</h3>
+                                    <small>2019.06</small>
+                                    <span class="button-readmore">Read More</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <p>情報理工学実験のテーマ8で作成した実験レポートとしてのサイトです。webオーサリングについて調べ学習等を行いました。ここで初めてW3Cの存在を知りました。また、このサイトはレスポンシブ化されていません。pcでみてください。学習のための1作品です。</p>
+                </div> -->
                 <div class="works_content fadein_8">
                     <div class="works-box">
-                        <a href="http://bbs-tokky08.herokuapp.com/">
-                            <img src="./img/site_9.png" alt="掲示板を作ってみた">
+                        <a href="collection-OF-works/Creative_HTML_and_CSS/index.html">
+                            <img src="./img/site_1.png" alt="架空カフェサイト">
                             <div class="works-box-inner">
                                 <div class="text-center">
-                                    <h3>掲示板を作ってみた</h3>
-                                    <small>2020.02</small>
+                                    <h3>架空カフェサイト</h3>
+                                    <small>2019.05</small>
                                     <span class="button-readmore">Read More</span>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <p>PHP/MySQLを用いて簡易的な掲示板を作りました。herokuで公開しています。ローカルではDockerを用いて開発しました。</p>
+                    <p>ある技術書を一冊やり終えて完成したサイトです。初めて作成したサイトであり、サイト作成の流れを掴めました。また、このサイトはレスポンシブ化されていません。pcでみてください。学習のための1作品です。</p>
                 </div>
             </div>
         </section>
