topのmenuを最下部に修正/タイトルを中央に修正

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" id="html_top">
 
 <head>
     <meta charset="utf-8">
@@ -41,15 +41,15 @@
             <h1>Kazuhito Tokita</h1>
             <p>student enginner</p>
         </section>
-        <div class="menu-pc">
-            <ul>
-                <li><a href="about.html">about</a></li>
-                <li><a href="works.html">works</a></li>
-                <li><a href="blog.html">blog</a></li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
-        </div>
     </main>
+    <footer class="menu-pc">
+        <ul>
+            <li><a href="about.html">about</a></li>
+            <li><a href="works.html">works</a></li>
+            <li><a href="blog.html">blog</a></li>
+            <li><a href="contact.html">contact</a></li>
+        </ul>
+    </footer>
 
 
     <!-- ハンバーガーメニューの動き -->
