twitterのurlを一時的に消去

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
             <ul>
                 <li><a href="mailto:tokky.kz08@gmail.com"><img src="img/address.png" alt="メール"></a></li>
                 <li><a href="https://github.com/tokky08"><img src="img/git.png" alt="GitHub"></a></li>
-                <li><a href="https://twitter.com/tokky08"><img src="img/twitter.png" alt="twitter"></a></li>
+                <li><a href="#"><img src="img/twitter.png" alt="twitter"></a></li>
             </ul>
         </section>
     </main>
