新たしく3つの作品を追加

--- a/works.html
+++ b/works.html
@@ -67,17 +67,26 @@
                     <div id="sld4" class="sld">
                         <a><img src="img/site_6.png" alt="作品4"></a>
                     </div>
-                    <div id="sld5" class="sld">
+                    <!--<div id="sld5" class="sld">
                         <a><img src="img/site_7.png" alt="作品5"></a>
-                    </div>
-                    <div id="sld6" class="sld">
+                    </div>-->
+                    <div id="sld5" class="sld">
                         <a><img src="img/site_8.png" alt="作品6"></a>
                     </div>
-                    <div id="sld7" class="sld">
+                    <div id="sld6" class="sld">
                         <a><img src="img/site_9.png" alt="作品7"></a>
                     </div>
-                    <div id="sld8" class="sld">
+                    <div id="sld7" class="sld">
                         <a><img src="img/site_10.png" alt="作品8"></a>
+                    </div>
+                    <div id="sld8" class="sld">
+                        <a><img src="img/site_11.png" alt="作品9"></a>
+                    </div>
+                    <div id="sld9" class="sld">
+                        <a><img src="img/site_12.png" alt="作品10"></a>
+                    </div>
+                    <div id="sld10" class="sld">
+                        <a><img src="img/site_13.png" alt="作品11"></a>
                     </div>
                 </div>
                 <div id="sld_nav"></div>
@@ -86,6 +95,51 @@
             </div>
             <div class="works-flex">
                 <div class="works_content fadein_1">
+                    <div class="works-box">
+                        <a href="https://github.com/tokky08/Kitchen_timer">
+                            <img src="./img/site_13.png" alt="キッチンタイマー">
+                            <div class="works-box-inner">
+                                <div class="text-center">
+                                    <h3>ステータスバーに表示するキッチンタイマー</h3>
+                                    <small>2020.05</small>
+                                    <span class="button-readmore">Read More</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <p>Wi-Fiマークなどがあるステータスバーに表示するキッチンタイマーです。Python/rumpsを使って開発しました。常に見えるところにキッチンタイマーを表示させたかったので開発しました。</p>
+                </div>
+                <div class="works_content fadein_2">
+                    <div class="works-box">
+                        <a href="https://github.com/tokky08/GetUpEarly_bot">
+                            <img src="./img/site_12.png" alt="早起きしろにゃんbot">
+                            <div class="works-box-inner">
+                                <div class="text-center">
+                                    <h3>早起きしろにゃんbot</h3>
+                                    <small>2020.04</small>
+                                    <span class="button-readmore">Read More</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <p>GAS/LINE Messageing API/Python/Googleスプレッドシート/Herokuを使って開発しました。早起きを促すbotです。春休みどうしても早起きができなかったので作ってみました。</p>
+                </div>
+                <div class="works_content fadein_1">
+                    <div class="works-box">
+                        <a href="https://github.com/tokky08/FaceRecognition">
+                            <img src="./img/site_11.png" alt="顔認証bot">
+                            <div class="works-box-inner">
+                                <div class="text-center">
+                                    <h3>顔認証bot</h3>
+                                    <small>2020.04</small>
+                                    <span class="button-readmore">Read More</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <p>Python/LINE Messaging API/Azure Face APIを使って開発しました。橋本環奈の写真を見分けるLIEN botです。よくある顔認識アプリにLINEというプラットフォームを掛け合わせました。</p>
+                </div>
+                <div class="works_content fadein_2">
                     <div class="works-box">
                         <a href="https://twitter-rank-tokky08.herokuapp.com/">
                             <img src="./img/site_10.png" alt="Twitter Rank">
@@ -100,7 +154,7 @@
                     </div>
                     <p>Python/Django/TwitterAPIを使って開発しました。入力したユーザーのフォロー・フォロワー数がフォローしている方々または、フォロワーの方々の中で何位かをランク付するアプリです。</p>
                 </div>
-                <div class="works_content fadein_2">
+                <div class="works_content fadein_1">
                     <div class="works-box">
                         <a href="http://bbs-tokky08.herokuapp.com/">
                             <img src="./img/site_9.png" alt="掲示板を作ってみた">
@@ -115,7 +169,7 @@
                     </div>
                     <p>PHP/MySQLを用いて簡易的な掲示板を作りました。herokuで公開しています。ローカルではDockerを用いて開発しました。</p>
                 </div>
-                <div class="works_content fadein_3">
+                <div class="works_content fadein_2">
                     <div class="works-box">
                         <a href="collection-OF-works/report-HTML-CSS/index.html">
                             <img src="./img/site_8.png" alt="未来電子テクノジーでのレポート">
@@ -130,7 +184,7 @@
                     </div>
                     <p>インターンをしていた未来電子テクノロジーで課された課題で作成したサイトです。HTMLとCSSの学習した内容を簡潔にまとめたサイトとなっています。</p>
                 </div>
-                <div class="works_content fadein_4">
+                <!--<div class="works_content fadein_4">
                     <div class="works-box">
                         <a href="collection-OF-works/airbnb_Replication/index.html">
                             <img src="./img/site_7.png" alt="airbinの模写">
@@ -144,8 +198,8 @@
                         </a>
                     </div>
                     <p>インターンをしていた未来電子テクノロジーから課された課題で作成したサイトです。airbnbのサイトを模写しました。完成度は低いですが、アウトプットとして学習のための1作品です。このサイトは比較的模写しやすいと思いました。なので初学者にはオススメです。</p>
-                </div>
-                <div class="works_content fadein_5">
+                </div>-->
+                <div class="works_content fadein_1">
                     <div class="works-box">
                         <a href="collection-OF-works/Fictional_Ophthalmology/home.html">
                             <img src="./img/site_6.png" alt="架空コーポレートサイト">
@@ -160,7 +214,7 @@
                     </div>
                     <p>このサイトはモックアップからデザインカンプ、コーディングと全て1から自分で考えて作成したサイトです。カルーセル部分をcssのみで実装しました。唯一ポートフォリオと言える作品となっています。</p>
                 </div>
-                <div class="works_content fadein_6">
+                <div class="works_content fadein_2">
                     <div class="works-box">
                         <a href="collection-OF-works/shopping-site-coding/top.html">
                             <img src="./img/site_5.png" alt="架空ショッピングサイト">
@@ -175,7 +229,7 @@
                     </div>
                     <p>あるデザインデータから作成したショッピングサイトです。実際にクライアントから依頼を受けるのと同様な形で作成したサイトです。模写のような練習となりました。レスポンシブ化とSCSSを使っています。学習のための1作品です。</p>
                 </div>
-                <div class="works_content fadein_7">
+                <div class="works_content fadein_1">
                     <div class="works-box">
                         <a href="collection-OF-works/corporate-site-coding/index.html">
                             <img src="./img/site_4.png" alt="架空コーポレートサイト">
@@ -205,7 +259,7 @@
                     </div>
                     <p>情報理工学実験のテーマ8で作成した実験レポートとしてのサイトです。webオーサリングについて調べ学習等を行いました。ここで初めてW3Cの存在を知りました。また、このサイトはレスポンシブ化されていません。pcでみてください。学習のための1作品です。</p>
                 </div> -->
-                <div class="works_content fadein_8">
+                <div class="works_content fadein_2">
                     <div class="works-box">
                         <a href="collection-OF-works/Creative_HTML_and_CSS/index.html">
                             <img src="./img/site_1.png" alt="架空カフェサイト">
@@ -351,54 +405,6 @@
                 }
             });
             $('.fadein_2').each(function() {
-                var elemPos = $(this).offset().top,
-                    scroll = $(window).scrollTop(),
-                    windowHeight = $(window).height();
-                if (scroll > elemPos - windowHeight + 100) {
-                    $(this).addClass('scrollin');
-                }
-            });
-            $('.fadein_3').each(function() {
-                var elemPos = $(this).offset().top,
-                    scroll = $(window).scrollTop(),
-                    windowHeight = $(window).height();
-                if (scroll > elemPos - windowHeight + 100) {
-                    $(this).addClass('scrollin');
-                }
-            });
-            $('.fadein_4').each(function() {
-                var elemPos = $(this).offset().top,
-                    scroll = $(window).scrollTop(),
-                    windowHeight = $(window).height();
-                if (scroll > elemPos - windowHeight + 100) {
-                    $(this).addClass('scrollin');
-                }
-            });
-            $('.fadein_5').each(function() {
-                var elemPos = $(this).offset().top,
-                    scroll = $(window).scrollTop(),
-                    windowHeight = $(window).height();
-                if (scroll > elemPos - windowHeight + 100) {
-                    $(this).addClass('scrollin');
-                }
-            });
-            $('.fadein_6').each(function() {
-                var elemPos = $(this).offset().top,
-                    scroll = $(window).scrollTop(),
-                    windowHeight = $(window).height();
-                if (scroll > elemPos - windowHeight + 100) {
-                    $(this).addClass('scrollin');
-                }
-            });
-            $('.fadein_7').each(function() {
-                var elemPos = $(this).offset().top,
-                    scroll = $(window).scrollTop(),
-                    windowHeight = $(window).height();
-                if (scroll > elemPos - windowHeight + 100) {
-                    $(this).addClass('scrollin');
-                }
-            });
-            $('.fadein_8').each(function() {
                 var elemPos = $(this).offset().top,
                     scroll = $(window).scrollTop(),
                     windowHeight = $(window).height();
