--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     </tr>
                 </table>
                 <div class="text">
-                    <p>京都の情報系学部の大学に通う22卒予定の学生です。データサイエンス/機械学習/WEB系に興味があります。現在は主に、WEBサイト・WEBアプリ制作に力を入れています。これまで学習したものは、HTML/CSS/SCSS/JavaScritp/PHP/SQL/C/Java/Python/Django/Git/Dcoker等です。現在は機械学習エンジニアを目指しています。</p>
+                    <p>京都の情報系学部の大学に通う22卒予定の学生です。データサイエンス/機械学習/WEB系に興味があります。現在は主に、WEBサイト・WEBアプリ制作に力を入れています。これまで学習したものは、HTML/CSS/SCSS/JavaScritp/React/PHP/WordPress/SQL/C/Java/Python/Django/Git/Dcoker等です。１からプロダクトを自分１人で立ち上げられるエンジニアを目指しています。いわゆるフルスタックなエンジニアになりたいです。</p>
                 </div>
             </div>
         </section>
